# amaru-doctor

./: .envrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.config/: config.json5
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
crates/client/src/: lib.rs
resources/: demo.tape
resources/chain.db/: 000008.sst  000013.sst  000108.sst  000112.sst  000132.sst  000133.sst  000134.sst  000135.sst  000136.sst  000137.sst  000138.sst  000139.sst  000140.sst  000157.sst  000158.sst  000159.sst  000160.sst  000161.sst  000162.sst  000163.sst  000164.sst  000165.sst  000174.sst  000177.sst  000179.sst  000180.sst  000181.sst  000182.sst  000183.sst  000184.sst  000185.sst  000186.sst  000187.sst  000189.sst  000191.sst  IDENTITY  LOG  LOG.old.1750772825509422  LOG.old.1750772825561012  LOG.old.1750772921480052  (+5 more)
resources/db-creator/: Cargo.toml
resources/db-creator/chain.db/: IDENTITY  LOG  LOG.old.1761040516673769  MANIFEST-000009
resources/db-creator/ledger.db/live/: IDENTITY  LOG  LOG.old.1761040516652235  MANIFEST-000009
resources/db-creator/src/: main.rs
resources/ledger.db/163/: 000009.sst  000011.sst  MANIFEST-000005  OPTIONS-000007
resources/ledger.db/167/: LOG
resources/ledger.db/live/: 000030.sst  000031.sst  000032.sst  000033.sst  000035.sst  000037.sst  000038.sst  IDENTITY  LOG  LOG.old.1748525450395800  LOG.old.1748525470520725  LOG.old.1748525496870529  LOG.old.1748525533972408  LOG.old.1748525542560162  LOG.old.1748709175944828  LOG.old.1748854821985564  LOG.old.1748856092899455  LOG.old.1748964128227945  LOG.old.1748980603266272  LOG.old.1748980629010943  LOG.old.1748980892378659  LOG.old.1753696824572079  LOG.old.1753696836861014  LOG.old.1756479496962303  LOG.old.1756479509124479  MANIFEST-000027  MANIFEST-000069  MANIFEST-000073  MANIFEST-000077  OPTIONS-000029
src/: action.rs  app.rs  app_model.rs  app_state.rs  build.rs  cli.rs  components.rs  config.rs  cursor.rs  detection.rs  errors.rs  focus.rs  iter.rs  layout.rs  lib.rs  logging.rs  main.rs  mutator.rs  nav.rs  owned_iter.rs  render.rs  ros_ext.rs  shared.rs  states.rs  to_list_item.rs  to_rich.rs  tui.rs  window.rs
src/components/: account.rs  async_list.rs  chain_page.rs  chain_search.rs  details.rs  empty.rs  entity_types.rs  flame_graph.rs  fps.rs  group.rs  home.rs  layout.rs  ledger_page.rs  list.rs  list_and_details.rs  message.rs  mod.rs  otel_page.rs  prom_metrics.rs  prometheus_page.rs  proxy_list.rs  resources.rs  root.rs  scroll.rs  search.rs  search_bar.rs  search_list.rs  search_result.rs  split.rs  stateful_details.rs  switch.rs  tab.rs  tabs.rs  trace_list.rs  utxo.rs  utxos.rs
src/components/group/: layout.rs  mod.rs  scroll.rs  split.rs  switch.rs
src/components/list_and_details/: account.rs  drep.rs  pool.rs  proposal.rs  utxo.rs
src/components/static/: entity_types.rs  mod.rs  search_types.rs
src/controller/: layout.rs  mod.rs
src/effects/: logo.rs
src/metrics/: charts.rs  metric_data.rs  mod.rs  model.rs  page.rs  service.rs
src/model/: async_list_model.rs  async_provider.rs  buffer_list.rs  button.rs  chain_view.rs  cursor.rs  dynamic_list.rs  layout.rs  ledger_search.rs  ledger_view.rs  list_view.rs  min_max_window.rs  mod.rs  otel_view.rs  prom_metrics.rs  search.rs  sma.rs  stats.rs  streaming_iter.rs  time_series.rs  window.rs
src/otel/: ancestor_iter.rs  batch_processor.rs  bounded_queue.rs  evictor.rs  graph.rs  id.rs  ingestor.rs  mod.rs  orphanage.rs  processor.rs  rate_limit.rs  service.rs  span_ext.rs  store.rs  trace_iter.rs
src/prometheus/: client.rs  model.rs  service.rs
src/store/: chaindb.rs  ledgerdb.rs  mod.rs  owned_iter.rs  rocks_db_switch.rs
src/to_rich/: account.rs  block_issuer.rs  drep.rs  pool.rs  proposal.rs  utxo.rs
src/types/: chain.rs
src/ui/: mod.rs  to_list_item.rs  to_rich.rs
src/ui/to_rich/: account.rs  block_issuer.rs  drep.rs  header.rs  metrics.rs  mod.rs  nonces.rs  pool.rs  proposal.rs  span.rs  utxo.rs
src/update/: button.rs  details.rs  drag.rs  focus.rs  layout.rs  list.rs  mod.rs  mouse.rs  mouse_click.rs  mouse_focus.rs  mouse_scroll.rs  poll_search.rs  prom_metrics.rs  scroll.rs  search.rs  select_span.rs  tabs.rs  tick.rs  trace_graph.rs  window.rs
src/update/search/: handler.rs  mod.rs
src/view/: adapter.rs  block.rs  defs.rs  details.rs  empty.rs  empty_list.rs  flame_graph.rs  header.rs  item_details.rs  line.rs  list.rs  metrics.rs  mod.rs  nonces.rs  otel.rs  prom_metrics.rs  search.rs  span.rs  span_bar.rs  tabs.rs  time_series.rs  trace_list.rs  window.rs
src/viewmodel/: dynamic_list.rs  mod.rs
src/window/: iter.rs  state.rs
