[package]
name = "amaru-doctor"
version = "0.0.1"
edition = "2024"
description = "A TUI for amaru"
authors = ["jeluard <jeluard@users.noreply.github.com>"]
build = "build.rs"
repository = "https://github.com/jeluard/amaru-doctor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amaru-consensus = { git = "https://github.com/pragma-org/amaru.git", rev = "6ded8dd394ab796d6ee54205eff0164a51acc992" }
amaru-kernel = { git = "https://github.com/pragma-org/amaru.git", rev = "6ded8dd394ab796d6ee54205eff0164a51acc992" }
amaru-ledger = { git = "https://github.com/pragma-org/amaru.git", rev = "6ded8dd394ab796d6ee54205eff0164a51acc992" }
amaru-slot-arithmetic = { git = "https://github.com/pragma-org/amaru.git", rev = "6ded8dd394ab796d6ee54205eff0164a51acc992" }
amaru-stores = { git = "https://github.com/pragma-org/amaru.git", rev = "6ded8dd394ab796d6ee54205eff0164a51acc992" }
anyhow = "1.0.100"
arc-swap = "1.7.1"
axum = "0.8.7"
better-panic = "0.3.0"
bytes = "1.11.0"
cbor-diag = "0.1.12"
chrono = "0.4.42"
clap = { version = "4.5.48", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
    "env",
] }
config = "0.15.17"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
delegate = "0.13"
derive_deref = "1.1.1"
directories = "6.0.0"
either = "1.15"
futures = "0.3.31"
hex = "0.4.3"
human-panic = "2.0.3"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.176"
minicbor = { version = "0.25.1", features = ["alloc"] }
opentelemetry-proto = "0.31.0"
ordered-float = "5.1.0"
pallas-codec = "0.33.0"
pallas-primitives = "0.33.0"
pretty_assertions = "1.4.1"
prometheus-parse = "0.2.5"
prost = "0.14.1"
ratatui = { version = "0.30.0-alpha.5", features = ["serde", "macros"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_plain = "1.0.2"
signal-hook = "0.3.18"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = "0.37.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tonic = "0.14.2"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde"] }

[build-dependencies]
anyhow = "1.0.100"
vergen-gix = { version = "1.0.9", features = ["build", "cargo"] }

[workspace]
members = ["resources/db-creator"]

[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
    "apt update",
    "apt install -y libclang-dev"
]
[workspace.metadata.cross.target.aarch64-unknown-linux-musl.env]
passthrough = ["LIBCLANG_PATH=/usr/lib/llvm-10/lib"]
